Подключит контентные изображения в формате WEBP

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -97,6 +97,9 @@
             </section>
             <a class="product__img" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1150px)" srcset="img/products/photo-1-desktop.webp 1x, img/products/photo-1-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/products/photo-1-tablet_1.webp 1x, img/products/photo-1-tablet_1@2x.webp 2x">
+                <source type="image/webp" srcset="img/products/photo-1-mobile_1.webp 1x, img/products/photo-1-mobile_1@2x.webp 2x">
                 <source media="(min-width: 1150px)" srcset="img/products/photo-1-desktop.jpg 1x, img/products/photo-1-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/products/photo-1-tablet_1.jpg 1x, img/products/photo-1-tablet_1@2x.jpg 2x">
                 <img src="img/products/photo-1-mobile_1.jpg" srcset="img/products/photo-1-mobile_1@2x.jpg 2x" alt="Вязаный зайчик голубого цвета" width="260" height="195">
@@ -121,6 +124,9 @@
             </section>
             <a class="product__img" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1150px)" srcset="img/products/photo-2-desktop.webp 1x, img/products/photo-2-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/products/photo-2-tablet_1.webp 1x, img/products/photo-2-tablet_1@2x.webp 2x">
+                <source type="image/webp" srcset="img/products/photo-2-mobile_1.webp 1x, img/products/photo-2-mobile_1@2x.webp 2x">
                 <source media="(min-width: 1150px)" srcset="img/products/photo-2-desktop.jpg 1x, img/products/photo-2-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/products/photo-2-tablet_1.jpg 1x, img/products/photo-2-tablet_1@2x.jpg 2x">
                 <img src="img/products/photo-2-mobile_1.jpg" srcset="img/products/photo-2-mobile_1@2x.jpg 2x" alt="Небольшая бело-Розовая корзина с тремя свернутыми полотенцами" width="260" height="195">
@@ -145,6 +151,9 @@
             </section>
             <a class="product__img" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1150px)" srcset="img/products/photo-3-desktop_1.webp 1x, img/products/photo-3-desktop_1@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/products/photo-3-tablet_1.webp 1x, img/products/photo-3-tablet_1@2x.webp 2x">
+                <source type="image/webp" srcset="img/products/photo-3-mobile_1.webp 1x, img/products/photo-3-mobile_1@2x.webp 2x">
                 <source media="(min-width: 1150px)" srcset="img/products/photo-3-desktop_1.jpg 1x, img/products/photo-3-desktop_1@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/products/photo-3-tablet_1.jpg 1x, img/products/photo-3-tablet_1@2x.jpg 2x">
                 <img src="img/products/photo-3-mobile_1.jpg" srcset="img/products/photo-3-mobile_1@2x.jpg 2x" alt="Большая бело-зеленая корзина с игрушками" width="260" height="195">
