--- a/source/index.html
+++ b/source/index.html
@@ -109,9 +109,12 @@
           </div>
         </dl>
         <picture>
+          <source type="image/webp" media="(min-width: 1150px)" srcset="img/products/triple-set-desktop_1.webp 1x, img/products/triple-set-desktop-1@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/products/triple-set-tablet_1.webp 1x, img/products/triple-set-tablet_1@2x.webp 2x">
+          <source type="image/webp" srcset="img/products/triple-set-mobile_1.webp 1x, img/products/triple-set-mobile_1@2x.webp 2x">
           <source media="(min-width: 1150px)" srcset="img/products/triple-set-desktop_1.jpg 1x, img/products/triple-set-desktop-1@2x.jpg 2x">
           <source media="(min-width: 768px)" srcset="img/products/triple-set-tablet_1.jpg 1x, img/products/triple-set-tablet_1@2x.jpg 2x">
-          <img class="top-sales__img" src="img/products/triple-set-mobile_1.jpg" srcset="img/products/triple-set-mobile_1@2x.png 2x" alt="Вязаные корзинки разных цветов и размеров" width="260" height="315">
+          <img class="top-sales__img" src="img/products/triple-set-mobile_1.jpg" srcset="img/products/triple-set-mobile_1@2x.jpg 2x" alt="Вязаные корзинки разных цветов и размеров" width="260" height="315">
         </picture>
         <p class="top-sales__price">Цена: 990 руб.</p>
         <button class="top-sales__button button">Заказать</button>
