Добавит описание Readme.md и скриншоты. Небольшие правки кода.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Мишка - интернет-магазин игрушек ручной работы</title>
-  <link rel="stylesheet" href="css/style.min.css" />
-  <link rel="icon" href="favicon.ico" />
-  <link rel="icon" href="img/favicons/32.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="img/favicons/180.png" />
-  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page-body">
@@ -78,6 +78,7 @@
 
     <div class="container">
       <section class="page-catalog__products">
+        <h2 class="visually-hidden">Список товаров</h2>
         <ul class="page-catalog__list products catalog">
           <li class="catalog__item">
             <section class="product-description">
