--- a/source/index.html
+++ b/source/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Мишка - интернет-магазин игрушек ручной работы</title>
-  <link rel="stylesheet" href="css/style.min.css" />
-  <link rel="icon" href="favicon.ico" />
-  <link rel="icon" href="img/favicons/32.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="img/favicons/180.png" />
-  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page-body">
@@ -252,6 +252,7 @@
         <label class="modal-order__size-label" for="size-l">l</label>
       </div>
       <button class="modal-order__button button">Добавить</button>
+      <button class="modal-order__close-button">Закрыть окно</button>
     </div>
   </section>
 
