--- a/source/order.html
+++ b/source/order.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Мишка - интернет-магазин игрушек ручной работы</title>
-  <link rel="stylesheet" href="css/style.min.css" />
-  <link rel="icon" href="favicon.ico" />
-  <link rel="icon" href="img/favicons/32.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="img/favicons/180.png" />
-  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page-body">
@@ -143,11 +143,9 @@
 
             <label class="form-group__contact">
               <input class="form-group__text-field form-group__text-field--contacts form-group__text-field--tel" type="tel" name="tel" id="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" pattern="[0-9]-[0-9]{3}-[0-9]{3}-[0-9]{2,10}" minlength="10" maxlength="20" required>
-              <div class="form-group__icon">
-                <svg width="25" height="24">
-                  <use xlink:href="img/icons/sprite.svg#icon-phone"></use>
-                </svg>
-              </div>
+              <svg class="form-group__icon" width="25" height="24">
+                <use xlink:href="img/icons/sprite.svg#icon-phone"></use>
+              </svg>
             </label>
           </fieldset>
 
@@ -156,11 +154,9 @@
 
             <label class="form-group__contact">
               <input class="form-group__text-field form-group__text-field--contacts form-group__text-field--email" type="email" name="email" id="email" placeholder="Ваш Email*" required>
-              <div class="form-group__icon">
-                <svg width="32" height="21">
-                  <use xlink:href="img/icons/sprite.svg#icon-mail"></use>
-                </svg>
-              </div>
+              <svg class="form-group__icon" width="32" height="21">
+                <use xlink:href="img/icons/sprite.svg#icon-mail"></use>
+              </svg>
             </label>
           </fieldset>
         </div>
