Исправит адаптив (горизонтальный скролл)

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
 
 <body class="page-body">
   <header class="page-header">
-    <div class="page-hader__wrapper">
+    <div class="page-hader__wrapper container">
       <div class="page-header__top">
         <a href="index.html" class="logo">
           <picture>
@@ -75,7 +75,7 @@
     <header class="page-main__header">
       <h1 class="page-main__title">Милые штуки ручной<br> работы для дома</h1>
 
-      <nav class="page-main__nav fast-links">
+      <nav class="page-main__nav fast-links container">
         <ul class="fast-links__list">
           <li class="fast-links__item fast-links__item--left">
             <a class="fast-links__link fast-links__link--left" href="#">Предметы интерьера</a>
