--- a/source/order.html
+++ b/source/order.html
@@ -14,7 +14,7 @@
 
 <body class="page-body">
   <header class="page-header inner-header">
-    <div class="page-hader__wrapper">
+    <div class="page-hader__wrapper container">
       <div class="page-header__top">
         <a href="index.html" class="logo">
           <picture>
@@ -76,7 +76,7 @@
       <h1 class="inner-page__title container">Вязание на заказ</h1>
     </header>
 
-    <div class="page-order_wrapper">
+    <div class="page-order_wrapper container">
       <form class="page-order__form order-form" action="https://echo.htmlacademy.ru" method="post">
         <header class="order-form__header">
           <p class="order-form__promo-text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
